# d0018e-project

./: .gitignore  .nav  Cargo.toml  Dioxus.toml  LICENSE  README.md  clippy.toml  schema.sql
.sqlx/: query-0245166501d805f0e7951ddc71142ba3a68212662196737a79aa9c4ce7f320c7.json  query-0d0dc6ded648b9b6f9cd301503574cd0de326a56a4e49aaac0f05ca3822bdc00.json  query-0dcce0d47fc140dfe1e655367c144ae4478499d556ddb437b1db8787b1777c8e.json  query-102c6741e4f62b74ed988642f2f35cc15b8058da8f9a73d0e2a4d9cd8b06408a.json  query-107de13cd54aecd87dea6907d1f54102f572ba61c0a860409750fb34fe3d4fa2.json  query-12001d245d8a9a00b4525e6d33b58658abb6e3a80c2f53d39cbb6a3d7ec52372.json  query-1305abf0eb688c8ba92a21e586783862c617b7c10a84ad8457f8b0c2b553b038.json  query-1489f55e00cd157226ef1e943b72ac5c2139dc3d33e59781eec315b1a84f8960.json  query-1722b01988010169fe002c59bbb3cb8576a6eedd94970016f3936ebe4dd82790.json  query-180a680f0a81da5caa802b41aaf3d8ffbc4aa318ef38155469f8d92dcdabb911.json  query-195403034735730d742e5c3ca7771546840709994a470cbebf2571ff22fff814.json  query-1994da7da37078e0b644b77296c69484f76922cc44e1f4d50bb68fa19595dde4.json  query-1a72ff5192994f12d62b6b2d8e2d1c066d41df52eed08db1b64197c281575cea.json  query-1b802341287ff96882216b57b9773f28e1d593cc1c0d3138bd00194c4ff779fc.json  query-1d33f56abfac2e7dca96ec41016963d055f47847d2f8b788939a01ab6e8ead03.json  query-1db33034aa0a5ab90cb9f50d15c45d9c638ce14c81f18eef2be270ed927899fe.json  query-1def64246c6338273de3196644defc9dd7de085d1ea39771aedca1a6f480d5bb.json  (+103 more)
assets/: tailwind.css
database/: Cargo.toml
database/src/: id.rs  lib.rs  types.rs
(+45 files in other folders)
