[package]
edition = "2024"
name = "database"
version = "0.1.0"

[dependencies]
derive_more = { features = ["deref", "display", "into"], version = "2.1.1" }
num-traits = { default-features = false, features = ["std"], version = "0.2.19" }
sqlx = { features = ["chrono", "postgres", "rust_decimal"], version = "0.8.6" }

[lints]
workspace = true
